--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -21,7 +21,7 @@
 # escpecially if they contain "#" chars...
 # Remember to edit /etc/mysql/debian.cnf when changing the socket location.
 [client]
-port            = 3306
+port            = <%= node['mysql']['port'] %>
 socket          = <%= node['mysql']['socket'] %>
 
 # Here is entries for some specific programs
@@ -46,10 +46,10 @@ nice            = 0
 user            = mysql
 pid-file        = <%= node['mysql']['pid_file'] %>
 socket          = <%= node['mysql']['socket'] %>
-port            = 3306
+port            = <%= node['mysql']['port'] %>
 basedir         = <%= node['mysql']['basedir'] %>
 datadir         = <%= node['mysql']['data_dir'] %>
-tmpdir          = /tmp
+tmpdir          = <%= node['mysql']['tmp_dir'] %>
 skip-external-locking
 #
 # Instead of skip-networking the default is now to listen only on
