--- a/templates/default/port_mysql.erb
+++ b/templates/default/port_mysql.erb
@@ -1,3 +1,3 @@
 # MySQL
--A FWR -p tcp -m tcp --dport 3306 -j ACCEPT
--A FWR -p udp -m udp --dport 3306 -j ACCEPT
+-A FWR -p tcp -m tcp --dport <%= node['mysql']['port'] %> -j ACCEPT
+-A FWR -p udp -m udp --dport <%= node['mysql']['port'] %> -j ACCEPT
