--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -89,21 +89,40 @@ query_cache_size        = <%= node['mysql']['tunable']['query_cache_size'] %>
 #log            = /var/log/mysql/mysql.log
 #
 # Error logging goes to syslog. This is a Debian improvement :)
+<%- if node['mysql']['log_error'] %>
+log-error = <%= node['mysql']['log_error'] %>
+<%- end %>
 #
 # Here you can see queries with especially long duration
 log_slow_queries        = <%= node['mysql']['tunable']['log_slow_queries'] %>
 long_query_time         = <%= node['mysql']['tunable']['long_query_time'] %>
+<%- if node['mysql']['tunable']['log_queries_not_using_index'] %>
 log-queries-not-using-indexes
+<%- end %>
 #
 # The following can be used as easy to replay backup logs or for replication.
 # note: if you are setting up a replication slave, see README.Debian about
 #       other settings you may need to change.
 #server-id              = 1
-#log_bin                        = /var/log/mysql/mysql-bin.log
+<%- if node['mysql']['tunable']['log_bin'] %>
+log_bin = <%= node['mysql']['tunable']['log_bin'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['log_bin_trust_function_creators'] %>
+log_bin_trust_function_creators
+<%- end %>
 expire_logs_days        = <%= node['mysql']['tunable']['expire_logs_days'] %>
 max_binlog_size         = <%= node['mysql']['tunable']['max_binlog_size'] %>
 #binlog_do_db           = include_database_name
 #binlog_ignore_db       = include_database_name
+<%- if node['mysql']['tunable']['relay_log'] %>
+relay-log               = <%= node['mysql']['tunable']['relay_log'] %>
+<%- end %>
+log_slave_updates       = <%= node['mysql']['tunable']['log_slave_updates'] %>
+sync_binlog             = <%= node['mysql']['tunable']['sync_binlog'] %>
+<%- if node['mysql']['tunable']['skip_slave_start'] %>
+skip_slave_start
+<%- end %>
+
 #
 # * InnoDB
 #
@@ -112,6 +131,13 @@ max_binlog_size         = <%= node['mysql']['tunable']['max_binlog_size'] %>
 # You might want to disable InnoDB to shrink the mysqld process by circa 100MB.
 #skip-innodb
 innodb_buffer_pool_size = <%= node['mysql']['tunable']['innodb_buffer_pool_size'] %>
+innodb_log_file_size    = <%= node['mysql']['tunable']['innodb_log_file_size'] %>
+innodb_additional_mem_pool_size = <%= node['mysql']['tunable']['innodb_additional_mem_pool_size'] %>
+innodb_data_file_path   = <%= node['mysql']['tunable']['innodb_data_file_path'] %>
+innodb_file_per_table
+innodb_flush_log_at_trx_commit = <%= node['mysql']['tunable']['innodb_flush_log_at_trx_commit'] %>
+innodb_flush_method     = <%= node['mysql']['tunable']['innodb_flush_method'] %>
+innodb_log_buffer_size  = <%= node['mysql']['tunable']['innodb_log_buffer_size'] %>
 
 <% if @skip_federated %>
 #
