--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -76,6 +76,8 @@ back_log                = <%= node['mysql']['tunable']['back_log'] %>
 table_cache             = <%= node['mysql']['tunable']['table_cache'] %>
 max_heap_table_size     = <%= node['mysql']['tunable']['max_heap_table_size'] %>
 
+character_set_server           = <%= node['mysql']['tunable']['character_set_server'] %>
+collation_server               = <%= node['mysql']['tunable']['collation_server'] %>
 innodb_flush_log_at_trx_commit = <%= node['mysql']['tunable']['innodb_flush_log_at_trx_commit'] %>
 innodb_file_per_table          = <%= node['mysql']['tunable']['innodb_file_per_table'] %>
 #
