--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -148,7 +148,7 @@ innodb_flush_log_at_trx_commit = <%= node['mysql']['tunable']['innodb_flush_log_
 innodb_flush_method     = <%= node['mysql']['tunable']['innodb_flush_method'] %>
 innodb_log_buffer_size  = <%= node['mysql']['tunable']['innodb_log_buffer_size'] %>
 
-<% if ['debian', 'ubuntu'].include?(node['platform']) %>
+<% if !['debian', 'ubuntu'].include?(node['platform']) %>
   innodb_adaptive_flushing  = <%= node['mysql']['tunable']['innodb_adaptive_flushing'] %>
 <% end %>
 
