--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -142,7 +142,7 @@ innodb_file_per_table
 innodb_flush_log_at_trx_commit = <%= node['mysql']['tunable']['innodb_flush_log_at_trx_commit'] %>
 innodb_flush_method     = <%= node['mysql']['tunable']['innodb_flush_method'] %>
 innodb_log_buffer_size  = <%= node['mysql']['tunable']['innodb_log_buffer_size'] %>
-innodb_adaptive_flushing  = <%= node['mysql']['tunable']['innodb_adaptive_flushing'] %>
+#innodb_adaptive_flushing  = <%= node['mysql']['tunable']['innodb_adaptive_flushing'] %>
 
 <% if @skip_federated %>
 #
