Change attribute default['mysql']['tunable']['wait_timeout'] = "180". Add attribute default['mysql']['tunable']['interactive_timeout']  = "180". Update my.cnf.erb template to reflect new attribute.

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -74,6 +74,7 @@ myisam-recover          = BACKUP
 #thread_concurrency     = 10
 max_connections         = <%= node['mysql']['tunable']['max_connections'] %>
 wait_timeout            = <%= node['mysql']['tunable']['wait_timeout'] %>
+interactive_timeout     = <%= node['mysql']['tunable']['interactive_timeout'] %>
 net_read_timeout        = <%= node['mysql']['tunable']['net_read_timeout'] %>
 net_write_timeout       = <%= node['mysql']['tunable']['net_write_timeout'] %>
 back_log                = <%= node['mysql']['tunable']['back_log'] %>
