COOK-2145 - Added two new attributes to delete passwordless and anonymous accounts

--- a/templates/default/grants.sql.erb
+++ b/templates/default/grants.sql.erb
@@ -13,3 +13,11 @@ GRANT REPLICATION SLAVE ON *.* TO 'repl'@'%' identified by '<%= node['mysql']['s
 GRANT ALL ON *.* TO 'root'@'%' IDENTIFIED BY '<%= node['mysql']['server_root_password'] %>' WITH GRANT OPTION;
 <% end -%>
 SET PASSWORD FOR 'root'@'localhost' = PASSWORD('<%= node['mysql']['server_root_password'] %>');
+
+<% if node['mysql']['delete_anonymous_users'] -%>
+DELETE FROM mysql.user WHERE User=''; FLUSH PRIVILEGES;
+<% end -%>
+
+<% if node['mysql']['delete_passwordless_users'] -%>
+DELETE FROM mysql.user WHERE Password=''; FLUSH PRIVILEGES;
+<% end -%>
