COOK-2313: !includedir for CentOS

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -235,7 +235,6 @@ innodb_buffer_pool_size = <%= node['mysql']['tunable']['innodb_buffer_pool_size'
 innodb_log_file_size    = <%= node['mysql']['tunable']['innodb_log_file_size'] %>
 innodb_additional_mem_pool_size = <%= node['mysql']['tunable']['innodb_additional_mem_pool_size'] %>
 innodb_data_file_path   = <%= node['mysql']['tunable']['innodb_data_file_path'] %>
-innodb_file_per_table
 innodb_flush_log_at_trx_commit = <%= node['mysql']['tunable']['innodb_flush_log_at_trx_commit'] %>
 <%- if node['mysql']['tunable']['innodb_flush_method'] %>
 innodb_flush_method     = <%= node['mysql']['tunable']['innodb_flush_method'] %>
@@ -293,21 +292,20 @@ myisam_recover            = <%= node['mysql']['tunable']['myisam_recover'] %>
 # [MYSQL_CLUSTER]
 # ndb-connectstring=127.0.0.1
 
-<% case node['platform_family'] -%>
-<% when "rhel", "fedora", "suse" -%>
+<% if node['mysql']['tunable']['skip-bdb'] -%>
 #
 # * BerkeleyDB
 #
 # Using BerkeleyDB is now discouraged as its support will cease in 5.1.12.
 skip-bdb
+<% end -%>
+
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
 old_passwords           = <%= node['mysql']['old_passwords'] %>
 
-<% else -%>
 #
 # * IMPORTANT: Additional settings that can override those from this file!
 #   The files must end with '.cnf', otherwise they'll be ignored.
 #
 !includedir <%= node['mysql']['confd_dir'] %>/
-<% end -%>
