Fixing myisam-recover option
Changed name to use hyphen instead of underscore as that's the official
way.

http://dev.mysql.com/doc/refman/5.0/en/server-options.html#option_mysqld_myisam-recover

Removing duplicate from attribute file.

Setting option in [mysqld] section of option file to use attibute
instead of being hard coded.

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -92,7 +92,7 @@ auto-increment-offset    = <%= node['mysql']['auto-increment-offset'] %>
 
 # This replaces the startup script and checks MyISAM tables if needed
 # the first time they are touched
-myisam-recover          = BACKUP
+myisam-recover          = <%= node['mysql']['tunable']['myisam-recover'] %>
 max_connections         = <%= node['mysql']['tunable']['max_connections'] %>
 max_connect_errors      = <%= node['mysql']['tunable']['max_connect_errors'] %>
 concurrent_insert       = <%= node['mysql']['tunable']['concurrent_insert'] %>
@@ -282,7 +282,7 @@ key_buffer                = <%= node['mysql']['tunable']['max_allowed_packet'] %
 myisam_sort_buffer_size   = <%= node['mysql']['tunable']['myisam_sort_buffer_size'] %>
 myisam_max_sort_file_size = <%= node['mysql']['tunable']['myisam_max_sort_file_size'] %>
 myisam_repair_threads     = <%= node['mysql']['tunable']['myisam_repair_threads'] %>
-myisam_recover            = <%= node['mysql']['tunable']['myisam_recover'] %>
+myisam-recover            = <%= node['mysql']['tunable']['myisam-recover'] %>
 
 #
 # * NDB Cluster
