[COOK-2628] Allow to disable bind-address

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -74,7 +74,7 @@ languages	    = <%= node['mysql']['tunable']['languages'] %>
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address            = <%= node['mysql']['bind_address'] %>
+<%= (node['mysql']['bind_address'] && node['mysql']['bind_address'] != "" ? "" : "# ") << "bind-address            = #{node['mysql']['bind_address']}" %>
 #
 # * Fine Tuning
 #
