Tweaked my.cnf to avoid problem with mysql 5.6+  * The variable table_cache is not recognized anymore by mysql under 5.6+

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -104,7 +104,10 @@ wait_timeout            = <%= node['mysql']['tunable']['wait_timeout'] %>
 net_read_timeout        = <%= node['mysql']['tunable']['net_read_timeout'] %>
 net_write_timeout       = <%= node['mysql']['tunable']['net_write_timeout'] %>
 back_log                = <%= node['mysql']['tunable']['back_log'] %>
+<%- if node['mysql']['version'].to_f < 5.6 %>
 table_cache             = <%= node['mysql']['tunable']['table_cache'] %>
+<% end %>
+
 <%- if node['mysql']['tunable']['table_open_cache'] %>
 table_open_cache        = <%= node['mysql']['tunable']['table_open_cache'] %>
 <%- end %>
