--- a/templates/default/grants.sql.erb
+++ b/templates/default/grants.sql.erb
@@ -23,7 +23,7 @@ DELETE FROM mysql.user WHERE User='';
 
 # Remove test database and access to it
 <% if node['mysql']['remove_test_database']  -%>
-DROP DATABASE test;
+DROP DATABASE IF EXISTS test;
 DELETE FROM mysql.db WHERE Db='test' OR Db='test\_%';
 <% end -%>
 SET PASSWORD FOR 'root'@'localhost' = PASSWORD('<%= node['mysql']['server_root_password'] %>');
