--- a/templates/default/grants.sql.erb
+++ b/templates/default/grants.sql.erb
@@ -11,7 +11,7 @@ GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, RELOAD, SHUTDOWN, PROCESS, F
 GRANT REPLICATION SLAVE ON *.* TO 'repl'@'%' identified by '<%= node['mysql']['server_repl_password'] %>';
 <% if node['mysql']['allow_remote_root'] -%>
 
-# Set the server root password. This should be preseeded by the package installation.
+# Set the server root password.
 GRANT ALL ON *.* TO 'root'@'%' IDENTIFIED BY '<%= node['mysql']['server_root_password'] %>' WITH GRANT OPTION;
 <% else %>
 
