--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -181,6 +181,26 @@ relay_log               = <%= node['mysql']['tunable']['relay_log'] %>
 relay_log_index         = <%= node['mysql']['tunable']['relay_log_index'] %>
 <%- end %>
 
+<%- if node['mysql']['tunable']['replicate_do_db'] %>
+replicate_do_db             = <%= node['mysql']['tunable']['replicate_do_db'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['replicate_do_table'] %>
+replicate_do_table          = <%= node['mysql']['tunable']['replicate_do_table'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['replicate_ignore_db'] %>
+replicate_ignore_db         = <%= node['mysql']['tunable']['replicate_ignore_db'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['replicate_ignore_table'] %>
+replicate_ignore_table      = <%= node['mysql']['tunable']['replicate_ignore_table'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['replicate_wild_do_table'] %>
+replicate_wild_do_table     = <%= node['mysql']['tunable']['replicate_wild_do_table'] %>
+<%- end %>
+<%- if node['mysql']['tunable']['replicate_wild_ignore_table'] %>
+replicate_wild_ignore_table = <%= node['mysql']['tunable']['replicate_wild_ignore_table'] %>
+<%- end %>
+
+
 sync_binlog             = <%= node['mysql']['tunable']['sync_binlog'] %>
 <%- if node['mysql']['tunable']['skip_slave_start'] %>
 skip_slave_start
