--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -145,10 +145,13 @@ log_warnings
 #
 # Here you can see queries with especially long duration
 <%- if node['mysql']['version'].to_f >= 5.5 %>
-slow_query_log          = <%= node['mysql']['tunable']['slow_query_log'] %>
-<% else %>
-log_slow_queries        = <%= node['mysql']['tunable']['slow_query_log'] %>
-<% end %>
+<%-   if node['mysql']['tunable']['slow_query_log'] %>
+slow_query_log      = 1
+slow_query_log_file = <%= node['mysql']['tunable']['slow_query_log'] %>
+<%-   end %>
+<%- else %>
+log_slow_queries    = <%= node['mysql']['tunable']['slow_query_log'] %>
+<%- end %>
 
 long_query_time         = <%= node['mysql']['tunable']['long_query_time'] %>
 <%- if node['mysql']['tunable']['log_queries_not_using_index'] and node['mysql']['tunable']['slow_query_log']  %>
