--- a/templates/default/debian.cnf.erb
+++ b/templates/default/debian.cnf.erb
@@ -9,4 +9,4 @@ host     = localhost
 user     = debian-sys-maint
 password = <%= node['mysql']['server_debian_password'] %>
 socket   = <%= node['mysql']['socket'] %>
-basedir  = /usr
+basedir  = <%= node['mysql']['basedir'] %>
