close to working server_rhel

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -44,12 +44,12 @@ nice            = <%= node['mysql']['nice'] %>
 #
 
 user            = mysql
-pid-file        = <%= node['mysql']['pid_file'] %>
-socket          = <%= node['mysql']['socket'] %>
-port            = <%= node['mysql']['port'] %>
-basedir         = <%= node['mysql']['basedir'] %>
-datadir         = <%= node['mysql']['data_dir'] %>
-tmpdir          = <%= node['mysql']['tmpdir'].join(':') %>
+pid-file        = <%= node['mysql']['server']['pid_file'] %>
+socket          = <%= node['mysql']['server']['socket'] %>
+port            = <%= node['mysql']['server']['port'] %>
+basedir         = <%= node['mysql']['server']['basedir'] %>
+datadir         = <%= node['mysql']['server']['data_dir'] %>
+tmpdir          = <%= node['mysql']['server']['tmpdir'].join(':') %>
 skip-external-locking
 <%- if node['mysql']['tunable']['skip-name-resolve'] %>
 skip-name-resolve
@@ -147,12 +147,12 @@ log_warnings
 #
 # Here you can see queries with especially long duration
 <%- if node['mysql']['version'].to_f >= 5.5 %>
-<%-   if node['mysql']['tunable']['slow_query_log'] %>
+<%-   if node['mysql']['server']['slow_query_log'] %>
 slow_query_log      = 1
-slow_query_log_file = <%= node['mysql']['tunable']['slow_query_log'] %>
+slow_query_log_file = <%= node['mysql']['server']['slow_query_log'] %>
 <%-   end %>
 <%- else %>
-log_slow_queries    = <%= node['mysql']['tunable']['slow_query_log'] %>
+log_slow_queries    = <%= node['mysql']['server']['slow_query_log'] %>
 <%- end %>
 
 long_query_time         = <%= node['mysql']['tunable']['long_query_time'] %>
@@ -277,7 +277,7 @@ innodb_adaptive_flushing_method = <%= node['mysql']['tunable']['innodb_adaptive_
 innodb_adaptive_checkpoint = <%= node['mysql']['tunable']['innodb_adaptive_checkpoint'] %>
 <%- end %>
 
-<% if @skip_federated %>
+<% if node['mysql']['server']['skip_federated'] %>
 #
 # * Federated
 #
