--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -123,6 +123,7 @@ sql_mode                = "<%= node['mysql']['tunable']['sql_mode'] %>"
 #
 # * Query Cache Configuration
 #
+query_cache_type        = <%= node['mysql']['tunable']['query_cache_type'] %>
 query_cache_limit       = <%= node['mysql']['tunable']['query_cache_limit'] %>
 query_cache_size        = <%= node['mysql']['tunable']['query_cache_size'] %>
 #
