--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -177,7 +177,16 @@ max_binlog_size         = <%= node['mysql']['tunable']['max_binlog_size'] %>
 binlog_cache_size       = <%= node['mysql']['tunable']['binlog_cache_size'] %>
 binlog_do_db            = <%= node['mysql']['tunable']['binlog_do_db'] %> 
 binlog_ignore_db        = <%= node['mysql']['tunable']['binlog_ignore_db'] %>
- 
+
+<%- if node['mysql']['tunable']['slave_mode'] %>
+master-host             = <%= node['mysql']['tunable']['master_host'] %>
+master-port             = <%= node['mysql']['tunable']['master_port'] %>
+master-user             = <%= node['mysql']['tunable']['master-user'] %>
+master-password         = <%= node['mysql']['tunable']['master-password'] %>
+master-connect-rety     = <%= node['mysql']['tunable']['master-connect-retry'] %>
+skip-slave-start        = <%= node['mysql']['tunable']['skip-slave-start'] %>
+<%- end %>
+
 <%- if node['mysql']['tunable']['relay_log'] %>
 relay_log               = <%= node['mysql']['tunable']['relay_log'] %>
 <%- end %>
