Added query_cache_type tunable

--- a/templates/default/my.cnf.erb
+++ b/templates/default/my.cnf.erb
@@ -125,6 +125,8 @@ sql_mode                = "<%= node['mysql']['tunable']['sql_mode'] %>"
 #
 query_cache_limit       = <%= node['mysql']['tunable']['query_cache_limit'] %>
 query_cache_size        = <%= node['mysql']['tunable']['query_cache_size'] %>
+query_cache_type        = <%= node['mysql']['tunable']['query_cache_type'] %>
+
 #
 # * Logging
 #
