--- a/templates/default/debian.cnf.erb
+++ b/templates/default/debian.cnf.erb
@@ -1,12 +1,12 @@
 [client]
 host     = localhost
 user     = debian-sys-maint
-password = <%= node['mysql']['server_debian_password'] %>
-socket   = <%= node['mysql']['server']['socket'] %>
+password = <%= node['rackspace_mysql']['server_debian_password'] %>
+socket   = <%= node['rackspace_mysql']['server']['socket'] %>
 
 [mysql_upgrade]
 host     = localhost
 user     = debian-sys-maint
-password = <%= node['mysql']['server_debian_password'] %>
-socket   = <%= node['mysql']['server']['socket'] %>
+password = <%= node['rackspace_mysql']['server_debian_password'] %>
+socket   = <%= node['rackspace_mysql']['server']['socket'] %>
 basedir  = /usr
