--- a/templates/default/usr.sbin.mysqld.erb
+++ b/templates/default/usr.sbin.mysqld.erb
@@ -30,7 +30,7 @@
   /var/log/mysql.log rw,
   /var/log/mysql.err rw,
   /var/lib/mysql/ r,
-  <%= node['mysql']['data_dir'] %>/** rwk,
+  <%= node['rackspace_mysql']['data_dir'] %>/** rwk,
   /var/log/mysql/ r,
   /var/log/mysql/* rw,
   /var/run/mysqld/mysqld.pid w,
