--- a/templates/default/grants.sql.erb
+++ b/templates/default/grants.sql.erb
@@ -3,7 +3,7 @@
 <% case node['platform_family'] -%>
 <% when "debian" -%>
 
-# Grant privileges for debian-sys-main user
+# Grant privileges for debian-sys-maint user
 GRANT SELECT, INSERT, UPDATE, DELETE, CREATE, DROP, RELOAD, SHUTDOWN, PROCESS, FILE, REFERENCES, INDEX, ALTER, SHOW DATABASES, SUPER, CREATE TEMPORARY TABLES, LOCK TABLES, EXECUTE, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'debian-sys-maint'@'localhost' IDENTIFIED BY '<%= node['rackspace_mysql']['server_debian_password'] %>' WITH GRANT OPTION;
 <% end %>
 
