Fix user-my.cnf.erb template to output root password.

--- a/templates/default/user-my.cnf.erb
+++ b/templates/default/user-my.cnf.erb
@@ -1,6 +1,6 @@
 [mysql]
-user=<%=@user%>
-password=<%=@pass%>
+user=root
+password=<%=node['rackspace_mysql']['server_root_password']%>
 [client]
-user=<%=@user%>
-password=<%=@pass%>
+user=root
+password=<%=node['rackspace_mysql']['server_root_password']%>
