Need to flush privileges after grants.

--- a/templates/default/grants.sql.erb
+++ b/templates/default/grants.sql.erb
@@ -37,4 +37,5 @@ SET PASSWORD FOR 'root'@'localhost' = PASSWORD('<%= node['mysql']['server_root_p
 
 # allow root to connect from a remote network if root_network_acl is not nil
 GRANT ALL PRIVILEGES ON *.* TO 'root'@'<%= node['mysql']['root_network_acl'] %>' IDENTIFIED BY '<%= node['mysql']['server_root_password'] %>' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
 <% end -%>
